(lang dune 3.6)

(name advent_of_code)

(generate_opam_files true)

(authors "Geine Mikhail")

(maintainers "Geine Mikhail")

(package
 (name advent_of_code)
 (synopsis "Advent Of Code 2022 in OCaml")
 (description "Solving Advent of Code 2022 in OCaml")
 (depends ocaml dune core))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project